<resources>
    <string name="app_name">Utilities</string>

    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="info">Notice</string>
    <string name="request_unsuccessful">Request could not be executed successfully</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_all">Select All</string>
    <string name="select_check_all">Select All</string>
    <string name="select_close">Close Selection</string>
    <string name="select_use">Use Selection</string>
</resources>
