<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/select_background"
    android:orientation="vertical"
    android:paddingBottom="5dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/select_padding"
        tools:listitem="@layout/list_multi_select_options" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/filter_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/multi_select_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:paddingLeft="3dp"
        android:paddingRight="3dp">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/check_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/select_check_all"
            android:textColor="@color/select_check_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_selection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_select_button"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/select_close" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/use_selection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_select_button"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/select_use" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
