<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DEDEDE"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="Select Options" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/dialog_multi_select_items" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/toggle_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/select_all" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="200dp"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/cancel"
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="@color/cancel_multi_select"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/proceed"
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center"
                        android:text="@string/proceed"
                        android:textColor="@color/proceed_multi_select"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>